--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
+    "@tanstack/react-query": "^4.16.1",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
