--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.16.1",
+    "axios": "^1.2.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
