--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
+    "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
+    "react-intersection-observer": "^9.4.1",
     "react-router-dom": "^6.4.3",
+    "react-scroll": "^1.8.9",
     "spinners-react": "^1.0.7"
   },
   "devDependencies": {
