--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-intersection-observer": "^9.4.1",
     "react-router-dom": "^6.4.3",
     "react-scroll": "^1.8.9",
-    "spinners-react": "^1.0.7"
+    "spinners-react": "^1.0.7",
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
